--- a/src/core/styles/components/navdrawer/_navdrawer-theme.scss
+++ b/src/core/styles/components/navdrawer/_navdrawer-theme.scss
@@ -4,73 +4,141 @@
 /// @author <a href="https://github.com/simeonoff" target="_blank">Simeon Simeonoff</a>
 /// @author <a href="https://github.com/desig9stein" target="_blank">Marin Popov</a>
 ////
+
+/// @param {Color} $background [null] - The navigation drawer background color.
+/// @param {Color} $border-color [null] - The navigation drawer right border color.
+/// @param {Color} $item-header-text-color [null] - The header's idle text color.
+/// @param {Color} $item-text-color [null] - The item's idle text color.
+/// @param {Color} $item-icon-color [null] - The item's icon color.
+/// @param {Color} $item-active-text-color [null] - The item's active text color.
+/// @param {Color} $item-active-background [null] - The item's active background color.
+/// @param {Color} $item-active-icon-color [null] - The item's icon active color.
+/// @param {Color} $item-hover-background [null] - The item's hover background color.
+/// @param {Color} $item-hover-text-color [null] - The item's hover text color.
+/// @param {Color} $item-hover-icon-color [null] - The item's hover icon color.
+///
+/// @requires text-contrast
+///
+/// @example scss Change the background and item colors
+///   $navdrawer-theme: igx-navdrawer-theme(
+///     $background: #2d313a,
+///     $item-active-background: #ecc256,
+///     $item-icon-color: #ecc256
+///   );
+///   // Pass the theme to the igx-navdrawer component mixin
+///   @include igx-navdrawer($navdrawer-theme);
 @function igx-navdrawer-theme(
-    $navdrawer-background-color: null,
-    $navdrawer-border-color: null,
+    $background: null,
+    $border-color: null,
+
+    $item-header-text-color: null,
     $item-text-color: null,
+    $item-icon-color: null,
+
     $item-active-text-color: null,
+    $item-active-background: null,
+    $item-active-icon-color:null,
+
     $item-hover-background: null,
     $item-hover-text-color: null,
-    $item-active-background: null,
-    $item-header-text-color: null,
-    $icon-color: null,
-    $active-icon-color:null
+    $item-hover-icon-color: null
 ) {
+    @if not($item-header-text-color) and $background {
+        $item-header-text-color: text-contrast($background);
+    }
+
+    @if not($item-text-color) and $background {
+        $item-text-color: text-contrast($background);
+    }
+
+    @if not($item-icon-color) and $background {
+        $item-icon-color: text-contrast($background);
+    }
+
+    @if not($item-active-background) and $background {
+        $item-active-background: rgba(text-contrast($background), .24);
+    }
+
+    @if not($item-active-text-color) and $item-active-background {
+        $item-active-text-color: text-contrast($item-active-background);
+    }
+
+    @if not($item-active-icon-color) and $item-active-background {
+        $item-active-icon-color: text-contrast($item-active-background);
+    }
+
+    @if not($item-hover-background) and $background {
+        $item-hover-background: rgba(text-contrast($background), .08);
+    }
+
+    @if not($item-hover-text-color) and $background {
+        $item-hover-text-color: text-contrast($background);
+    }
+
     @return (
-        navdrawer-background-color: $navdrawer-background-color,
-        navdrawer-border-color: $navdrawer-border-color,
+        background: $background,
+        border-color: $border-color,
         item-text-color:$item-text-color,
         item-active-text-color: $item-active-text-color,
         item-active-background: $item-active-background,
         item-hover-background: $item-hover-background,
         item-hover-text-color:$item-hover-text-color,
         item-header-text-color:$item-header-text-color,
-        icon-color:$icon-color,
-        active-icon-color:$active-icon-color
+        item-icon-color:$item-icon-color,
+        item-active-icon-color:$item-active-icon-color,
+        item-hover-icon-color: $item-hover-icon-color
     );
 }
 
+/// @param {Map} $theme - The theme used to style the component.
+/// @param {Map} $palette [$default-palette] - The palette used as basis for styling the component.
+/// @requires igx-navdrawer-theme
+/// @requires igx-color
+/// @requires igx-elevation
+/// @requires $elevations
+/// @requires $overlay-color
+/// @requires extend
+/// @requires rem
 @mixin igx-navdrawer($theme, $palette: $default-palette) {
     $default-theme: igx-navdrawer-theme(
-        $navdrawer-background-color: #fff,
-        $navdrawer-border-color: rgba(0, 0, 0, .14),
+        $background: #fff,
+        $border-color: rgba(0, 0, 0, .14),
         $item-text-color: igx-color($palette, grays, 800),
         $item-active-text-color: igx-color($palette, primary, 500),
         $item-active-background: igx-color($palette, grays, 100),
         $item-hover-background: igx-color($palette, grays, 200),
         $item-hover-text-color: igx-color($palette, grays, 800),
         $item-header-text-color: igx-color($palette, grays, 600),
-        $icon-color: igx-color($palette, grays, 600),
-        $active-icon-color: igx-color($palette, primary, 500)
+        $item-icon-color: igx-color($palette, grays, 600),
+        $item-active-icon-color: igx-color($palette, primary, 500),
+        $item-hover-icon-color: igx-color($palette, grays, 800)
     );
 
     $this: extend($default-theme, $theme);
 
-    $bezier: cubic-bezier(.25, .46, .45, .94);
-
     %animation {
         transition: flex-basis;
         transition-duration: .3s;
-        transition-timing-function: $bezier;
+        transition-timing-function: $ease-out-quad;
     }
 
-    %adide {
+    %aside {
         position: fixed;
         width: rem(242px);
         height: 100%;
         max-width: 90%;
         min-height: 100%;
         overflow-x: hidden;
-        background-color: map-get($this, 'navdrawer-background-color');
+        background-color: map-get($this, 'background');
         top: 0;
         bottom: 0;
         left: 0;
         z-index: 999;
         transition: width, transform;
         transition-duration: .3s, .3s;
-        transition-timing-function: $bezier, $bezier;
+        transition-timing-function: $ease-out-quad, $ease-out-quad;
         box-shadow: igx-elevation($elevations, 5);
-        border-right: 1px solid map-get($this, 'navdrawer-border-color');
+        border-right: 1px solid map-get($this, 'border-color');
     }
 
     %aside--pinned {
@@ -95,7 +163,7 @@
         left: auto;
         right: 0;
         border-right: none;
-        border-left: 1px solid map-get($this, 'navdrawer-border-color');
+        border-left: 1px solid map-get($this, 'border-color');
     }
 
     %aside--mini {
@@ -153,7 +221,7 @@
         }
 
         .igx-icon {
-            color: map-get($this, 'icon-color');
+            color: map-get($this, 'item-icon-color');
         }
     }
 
@@ -169,7 +237,7 @@
         }
 
         .igx-icon {
-            color: map-get($this, 'active-icon-color');
+            color: map-get($this, 'item-active-icon-color');
         }
     }
 
