--- a/src/core/styles/components/dialog/_dialog-theme.scss
+++ b/src/core/styles/components/dialog/_dialog-theme.scss
@@ -40,6 +40,7 @@
 /// @requires igx-color
 /// @requires igx-elevation
 /// @requires $elevations
+/// @requires $overlay-color
 /// @requires extend
 /// @requires em
 @mixin igx-dialog($theme, $palette: $default-palette) {
