refactor(themes): structural styles extend placeholder selectors
Closes #683

--- a/src/core/styles/components/_common/_igx-toggle.scss
+++ b/src/core/styles/components/_common/_igx-toggle.scss
@@ -1,5 +1,9 @@
+%igx-toggle--hidden {
+    display: none !important;
+}
+
 @include b(igx-toggle) {
     @include m(hidden) {
-        display: none !important;
+        @extend %igx-toggle--hidden !optional;
     }
 }
