--- a/src/core/styles/components/grid/_grid-component.scss
+++ b/src/core/styles/components/grid/_grid-component.scss
@@ -19,7 +19,7 @@
         @extend %grid-thead !optional;
 
         igx-display-container {
-            overflow: visible;
+            @extend %grid-display-container-thead !optional;
         }
     }
 
@@ -39,7 +39,7 @@
         @extend %grid-row !optional;
 
         igx-display-container {
-            width: 100%;
+            @extend %grid-display-container-tr !optional;
         }
     }
 
@@ -52,27 +52,14 @@
         @extend %grid-cell-header !optional;
         $block: bem--selector-to-string(&);
 
-        &.asc,
-        &.desc {
-            font-weight: 800;
-        }
-
-        &.desc {
-            > .title::before {
-                position: relative;
-                font-family: 'Material Icons', sans-serif;
-                content: '\E5DB';
-                margin-right: 8px;
-            }
-        }
-
         &.asc {
-            > .title::before {
-                position: relative;
-                font-family: 'Material Icons', sans-serif;
-                content: '\E5D8';
-                margin-right: 8px;
-            }
+            @extend %grid-sorting-display !optional;
+            @extend %grid-sorting-asc !optional;
+        }
+
+        &.desc {
+            @extend %grid-sorting-display !optional;
+            @extend %grid-sorting-desc !optional;
         }
     }
 
