--- a/src/core/styles/components/navdrawer/_navdrawer-component.scss
+++ b/src/core/styles/components/navdrawer/_navdrawer-component.scss
@@ -16,8 +16,7 @@
         @extend %aside !optional;
 
         &.panning {
-            overflow-x: hidden;
-            transition: none;
+            @extend %aside-panning !optional;
         }
     }
 
@@ -25,10 +24,10 @@
         @extend %aside--collapsed !optional;
 
         &.igx-nav-drawer__aside--right {
-            transform: translate3d(300px, 0, 0);
-            box-shadow: none;
+            @extend %aside--collapsed--right !optional;
         }
     }
+
 
     @include e(aside, right) {
         @extend %aside--right !optional;
@@ -51,12 +50,10 @@
         @extend %overlay !optional;
 
         &.panning {
-            transform: translate3d(0, 0, 0);
-            transition: none;
+            @extend %overlay-panning !optional;
 
             &.igx-nav-drawer__overlay--hidden {
-                /* must be visible during pan.. */
-                visibility: visible;
+                @extend %overlay-panning--hidden !optional;
             }
         }
     }
@@ -67,11 +64,7 @@
 
     // Style Dummy(hidden) used for measures
     @include e(style-dummy) {
-        height: 0;
-        background: none;
-        box-shadow: none;
-        transition: none;
-        visibility: hidden;
+        @extend %style-dummy !optional;
     }
 
     // igxDrawerItem Items
@@ -81,7 +74,6 @@
 
     @include e(item, active) {
         @extend %item !optional;
-
         @extend %item--active !optional;
     }
 
