--- a/demos/style/igniteui-theme.scss
+++ b/demos/style/igniteui-theme.scss
@@ -1,5 +1,62 @@
 @import '../lib/core/styles/themes/index';
 
+$exclude: (
+    igx-avatar,
+    igx-badge,
+    igx-button,
+    igx-button-group,
+    igx-calendar,
+    igx-card,
+    igx-carousel,
+    igx-checkbox,
+    igx-date-picker,
+    igx-dialog,
+    igx-grid,
+    igx-filtering,
+    igx-icon,
+    igx-form-group,
+    igx-list,
+    igx-navbar,
+    igx-nav-drawer,
+    igx-paginator,
+    progress-linear,
+    progress-circular,
+    igx-radio,
+    ig-ripple-host,
+    igx-slider,
+    igx-snackbar,
+    igx-switch,
+    igx-tab-bar,
+    igx-toast
+);
 // Generating a palette
 @include igx-core();
 @include igx-theme($default-palette);
+
+// @mixin gen-color-class($name, $variant, $prefix, $suffix) {
+//     $prefix: if($prefix, '#{$prefix}-', '');
+//     $suffix: if($suffix, '-#{$suffix}', '');
+
+//     .#{$prefix}#{$name}-#{$variant}#{$suffix} {
+//         @content;
+//     }
+// }
+
+// @mixin gen-color-classes($prop, $prefix, $suffix) {
+//     @each $palette-name, $sub-palette in $default-palette {
+//         @each $variant, $color in $sub-palette {
+//             @if type-of($color) != 'map' {
+//                 @include gen-color-class($palette-name, $variant, $prefix, $suffix) {
+//                     #{$prop}: $color;
+//                 }
+//             }
+//         }
+//     }
+// }
+
+// @mixin igx-color-classes($prop, $suffix: null, $prefix: 'igx') {
+//     @include gen-color-classes($prop, $prefix, $suffix);
+// }
+
+// @include igx-color-classes($prop: 'background-color', $prefix: 'my', $suffix: 'bg');
+// @include igx-color-classes($prop: 'color');
