--- a/src/core/styles/themes/_index.scss
+++ b/src/core/styles/themes/_index.scss
@@ -115,13 +115,13 @@
     @if not(index($exclude, 'igx-grid')) {
         @include igx-grid($theme: (), $palette: $palette);
     }
-    @if not(index($exclude, 'igx-grid-filtering')) {
+    @if not(index($exclude, 'igx-filtering')) {
         @include igx-grid-filtering($theme: (), $palette: $palette);
     }
     @if not(index($exclude, 'igx-icon')) {
         @include igx-icon($theme: (), $palette: $palette);
     }
-    @if not(index($exclude, 'igx-input')) {
+    @if not(index($exclude, 'igx-form-group')) {
         @include igx-input($theme: (), $palette: $palette);
     }
     @if not(index($exclude, 'igx-list')) {
@@ -130,19 +130,19 @@
     @if not(index($exclude, 'igx-navbar')) {
         @include igx-navbar($theme: (), $palette: $palette);
     }
-    @if not(index($exclude, 'igx-navdrawer')) {
+    @if not(index($exclude, 'igx-nav-drawer')) {
         @include igx-navdrawer($theme: (), $palette: $palette);
     }
-    @if not(index($exclude, 'igx-progress-circular')) {
+    @if not(index($exclude, 'progress-circular')) {
         @include igx-progress-circular($theme: (), $palette: $palette);
     }
-    @if not(index($exclude, 'igx-progress-linear')) {
+    @if not(index($exclude, 'progress-linear')) {
         @include igx-progress-linear($theme: (), $palette: $palette);
     }
     @if not(index($exclude, 'igx-radio')) {
         @include igx-radio($theme: (), $palette: $palette);
     }
-    @if not(index($exclude, 'igx-ripple')) {
+    @if not(index($exclude, 'ig-ripple-host')) {
         @include igx-ripple($theme: (), $palette: $palette);
     }
     @if not(index($exclude, 'igx-slider')) {
@@ -154,7 +154,7 @@
     @if not(index($exclude, 'igx-switch')) {
         @include igx-switch($theme: (), $palette: $palette);
     }
-    @if not(index($exclude, 'igx-tabbar')) {
+    @if not(index($exclude, 'igx-tab-bar')) {
         @include igx-tabbar($theme: (), $palette: $palette);
     }
     @if not(index($exclude, 'igx-toast')) {
