fix(themes): Internet Explorer 11 and Edge related fixes

--- a/src/core/styles/components/badge/_badge-theme.scss
+++ b/src/core/styles/components/badge/_badge-theme.scss
@@ -102,7 +102,7 @@
         color: map-get($this, 'text-color');
         line-height: $badge-line-height;
 
-        igx-icon {
+        .igx-icon {
             width: $badge-icon-font-size;
             height: $badge-icon-font-size;
             font-size: $badge-icon-font-size;
