fix(demos): Internet Explorer and Edge related fixes

--- a/demos/app/carousel/sample.component.html
+++ b/demos/app/carousel/sample.component.html
@@ -2,7 +2,7 @@
     <page-header title="Carousel" description="Displays a collection of slides or page-based interfaces. It can be used as a separate full screen element or inside another
     component."></page-header>
     <div class="sample-content">
-        <section>
+        <section style="width: 100%">
             <article>
                 <h4 class="sample-title">Desktop</h4>
                 <igx-carousel [interval]="interval" [pause]="pause" [loop]="loop">
