Applying changes after review:
- Applying temporary fix for misalignment between header/content in the fixed to the end area. This will probably affect the filtering drop-downs since it changes the overflow for the header dc to be hidden. However, at this time I see no other way to force the additioan virtualized column headers from overflowing their current container and offsetting the fixed to the end of the grid columns.
- Making PinLocation optional param for the pin column method. If not set will pin to the start.
- Renaming “fixed” to “pinned” in header component.
- Optimize get visibleIndex() for cols.

--- a/src/core/styles/components/grid/_grid-theme.scss
+++ b/src/core/styles/components/grid/_grid-theme.scss
@@ -200,7 +200,8 @@
     }
 
     %grid-display-container-thead {
-        overflow: visible;
+        overflow-x: hidden;
+        overflow-y:visible;
     }
 
     %grid-display-container-tr {
