--- a/demos/app/pageHeading/pageHeading.styles.css
+++ b/demos/app/pageHeading/pageHeading.styles.css
@@ -8,7 +8,7 @@
     display: flex;
     flex-flow: row nowrap;
     align-items: center;
-    line-height: 1em;
+    line-height: 1rem;
     color: #ec6f74;
     font-weight: normal;
     margin: 0;
