--- a/src/icon/icon.component.html
+++ b/src/icon/icon.component.html
@@ -1,3 +1,1 @@
-<i #icon *ngIf="getFontSet == 'material'" class="material-icons">
-    {{ getIconName }}
-</i>
+<ng-container>{{getIconName}}</ng-container>
