--- a/src/core/styles/components/badge/_badge-theme.scss
+++ b/src/core/styles/components/badge/_badge-theme.scss
@@ -72,7 +72,6 @@
 
     $badge-font-size: rem(11px);
     $badge-font-weight: 600;
-    $badge-line-height: 2px;
 
     $badge-icon-font-size: rem(12px);
 
@@ -100,11 +99,14 @@
         font-size: $badge-font-size;
         font-weight: $badge-font-weight;
         color: map-get($this, 'text-color');
-        line-height: $badge-line-height;
+        line-height: 1;
 
-        .igx-icon {
-            width: $badge-icon-font-size;
-            height: $badge-icon-font-size;
+        igx-icon {
+            display: inline-flex;
+            justify-content: center;
+            align-items: center;
+            width: $badge-width;
+            height: $badge-width;
             font-size: $badge-icon-font-size;
             font-weight: $badge-font-weight;
             color: map-get($this, 'icon-color');
