--- a/src/icon/icon.component.html
+++ b/src/icon/icon.component.html
@@ -1,1 +1,11 @@
-<ng-container>{{getIconName}}</ng-container>
+<ng-template #noLigature></ng-template>
+
+<ng-template #explicitLigature>
+    <ng-content></ng-content>
+</ng-template>
+
+<ng-template #implicitLigature>
+    {{getIconName}}
+</ng-template>
+
+<ng-container *ngTemplateOutlet="template"></ng-container>
