--- a/demos/index.ejs
+++ b/demos/index.ejs
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style/preloader.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/web-animations/2.3.1/web-animations.min.js"></script>
     <script src="https://unpkg.com/hammerjs@2.0.8/hammer.js"></script>
+    <script src="https://use.fontawesome.com/a28bc2729f.js"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web:300,400,600,700" rel="stylesheet">
     <title>
