refactor(demos): add samples using font-awesome icons

--- a/demos/index.ejs
+++ b/demos/index.ejs
@@ -9,9 +9,12 @@
     <link rel="stylesheet" href="style/preloader.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/web-animations/2.3.1/web-animations.min.js"></script>
     <script src="https://unpkg.com/hammerjs@2.0.8/hammer.js"></script>
-    <script src="https://use.fontawesome.com/a28bc2729f.js"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web:300,400,600,700" rel="stylesheet">
+    <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free-webfonts/css/fontawesome.css">
+    <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free-webfonts/css/fa-brands.css">
+    <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free-webfonts/css/fa-regular.css">
+    <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free-webfonts/css/fa-solid.css">
     <title>
         <%= htmlWebpackPlugin.options.title %>
     </title>
