Fix the sample to work

--- a/src/core/styles/themes/_core.scss
+++ b/src/core/styles/themes/_core.scss
@@ -34,6 +34,7 @@
 @import '../components/switch/switch-component';
 @import '../components/tabbar/tabbar-component';
 @import '../components/toast/toast-component';
+@import '../components/tiem-picker/time-picker-component';
 
 @mixin igx-core() {
     @include igx-typography($config: ('font-family': 'Titillium Web'));
