Add pinning rejection if width of pinned area becomes bigger than the grid width.

--- a/demos/app/grid-column-pinning/sample.component.html
+++ b/demos/app/grid-column-pinning/sample.component.html
@@ -3,8 +3,13 @@
     </igx-column>
 </igx-grid>
 <br />
-<button igxButton="raised" (click)="toggleColumn('ContactName')">Toggle pin state 'ContactName' column</button>
-<button igxButton="raised" (click)="toggleColumn('ContactTitle')">Toggle pin state 'ContactTitle' column</button>
-<button igxButton="raised" (click)="toggleVisibility('ID')">Toggle Visibility 'ID' column</button>
-<button igxButton="raised" (click)="toggleVisibility('ContactName')">Toggle Visibility 'ContactName' column</button>
-<button igxButton="raised" (click)="toggleVisibility('ContactTitle')">Toggle Visibility 'ContactTitle' column</button>
+<button igxButton="raised" (click)="toggleColumn('ContactName')">Pin 'ContactName'</button>
+<button igxButton="raised" (click)="toggleColumn('ContactTitle')">Pin 'ContactTitle'</button>
+<button igxButton="raised" (click)="toggleColumn('CompanyName')">Pin 'CompanyName'</button>
+<button igxButton="raised" (click)="toggleColumn('City')">Pin 'City'</button>
+<button igxButton="raised" (click)="toggleColumn('Region')">Pin 'Region'</button>
+<button igxButton="raised" (click)="toggleColumn('Address')">Pin 'Address'</button>
+<br/>
+<button igxButton="raised" (click)="toggleVisibility('ID')">Visibility 'ID'</button>
+<button igxButton="raised" (click)="toggleVisibility('ContactName')">Visibility 'ContactName'</button>
+<button igxButton="raised" (click)="toggleVisibility('ContactTitle')">Visibility 'ContactTitle'</button>
