--- a/src/grid/grid.component.html
+++ b/src/grid/grid.component.html
@@ -35,9 +35,8 @@
                                 [igxForScrollOrientation]="'vertical'"
                                 [igxForContainerSize]='calcHeight'
                                 [igxForItemSize]="rowHeight"
-                                 let-dirty="dirty"
                                 #scrollContainer>
-           <igx-grid-row [gridID]="id" [index]="rowIndex" [rowData]="rowData" [isDirty]="dirty">
+           <igx-grid-row [gridID]="id" [index]="rowIndex" [rowData]="rowData">
            </igx-grid-row>
         </ng-template>
 </div>
