--- a/src/grid/row.component.html
+++ b/src/grid/row.component.html
@@ -1,3 +1,3 @@
-<ng-template igxFor let-col [igxForOf]="columns" [igxForScrollContainer]="grid.parentVirtDir" let-colIndex="index" let-dirty="dirty" [igxForScrollOrientation]="'horizontal'" [igxForContainerSize]='grid.calcWidth' #igxDirRef>
-    <igx-grid-cell [column]="col" [row]="this" [style.min-width.px]="col.width" [value]="rowData[col.field]" [cellTemplate]="col.bodyTemplate" [isDirty]='dirty'></igx-grid-cell>
+<ng-template igxFor let-col [igxForOf]="columns" [igxForScrollContainer]="grid.parentVirtDir" let-colIndex="index" [igxForScrollOrientation]="'horizontal'" [igxForContainerSize]='grid.calcWidth' #igxDirRef>
+    <igx-grid-cell [column]="col" [row]="this" [style.min-width.px]="col.width" [value]="rowData[col.field]" [cellTemplate]="col.bodyTemplate"></igx-grid-cell>
 </ng-template>
