design for the time picker sample. TODO THEMEING

--- a/src/core/styles/components/tiem-picker/_time-picker-theme.scss
+++ b/src/core/styles/components/tiem-picker/_time-picker-theme.scss
@@ -6,7 +6,6 @@ $components: register-component($components, #{$component-name});
     $text-color: null
 ) {
 
-
     @return (
         background: $background,
         text-color: $text-color,
@@ -14,10 +13,106 @@ $components: register-component($components, #{$component-name});
 }
 
 @mixin igx-time-picker($theme, $palette: $default-palette) {
-    $default-theme: igx-time-picker-theme(
 
-    );
+    $default-theme: igx-date-picker-theme();
 
     $this: extend($default-theme, $theme);
+
+    %igx-time-picker__body {
+        display: flex;
+        height: 325px;
+        justify-content: center;
+    }
+
+    %time-picker-display {
+        max-width: 340px;
+        min-width: 320px;
+        padding: 0;
+    }
+
+    %time-picker-content {
+        width: 100%;
+        padding: 0;
+        color: inherit;
+        font-size: initial;
+        line-height: initial;
+    }
+
+    %time-picker-dialog-title {
+        display: none;
+    }
+
+    %time-picker-dialog-actions {
+        margin: 0;
+    }
+
+    %igx-time-picker__hourList {
+        text-align: right;
+    }
+
+    %igx-time-picker__minuteList {
+        text-align: center;
+    }
+
+    %igx-time-picker__ampmList {
+        display: flex;
+        flex-direction: column;
+    }
+
+    %igx-time-picker__column {
+        margin: 0 0 0 15px;
+        overflow-y: auto;
+        overflow-x: hidden;
+        overflow: hidden;
+        font-size: 16px;
+        cursor: pointer;
+        list-style: none inside;
+        padding: 0;
+        align-items: center;
+        justify-content: center;
+        width: 64px;
+
+        &:first-of-type {
+            margin-left: 0;
+        }
+    }
+
+    %li {
+        width: 64px;
+        padding: 5px 10px;
+        border-radius: 15px;
+
+        &:hover {
+            color: #e41c77;
+        }
+    }
+
+    %igx-time-picker__hourList--selected,
+    %igx-time-picker__minuteList--selected,
+    %igx-time-picker__ampmList--selected {
+        font-size: 24px;
+        color: #e41c77;
+        background: #f9f9f9;
+    }
+
+
+    %igx-time-picker__ampmList--1,
+    %igx-time-picker__minuteList--1,
+    %igx-time-picker__hourList--1 {
+        opacity: .2;
+    }
+
+    %igx-time-picker__ampmList--2,
+    %igx-time-picker__minuteList--2,
+    %igx-time-picker__hourList--2 {
+        opacity: .45;
+    }
+
+    %igx-time-picker__ampmList--3,
+    %igx-time-picker__minuteList--3,
+    %igx-time-picker__hourList--3 {
+        opacity: .8;
+    }
 }
+
 
