--- a/src/time-picker/time-picker.component.html
+++ b/src/time-picker/time-picker.component.html
@@ -1,9 +1,10 @@
 <input igxInput (click)="onClick()" [value]="displayTime" [disabled]="isDisabled" tabindex="0" />
 <ng-container *ngTemplateOutlet="scroll" ></ng-container>
 <ng-template #scroll>
-    <igx-dialog class="igx-date-picker__dialog-popup" closeOnOutsideSelect="true"
-            [leftButtonLabel]="cancelButtonLabel" (onLeftButtonSelect)="triggerCancelSelection()" 
-            [rightButtonLabel]="okButtonLabel" (onRightButtonSelect)="triggerOKSelection()">
+    <div class="igx-time-picker">
+        <igx-dialog class="igx-date-picker__dialog-popup" closeOnOutsideSelect="true"
+                    [leftButtonLabel]="cancelButtonLabel" (onLeftButtonSelect)="triggerCancelSelection()"
+                    [rightButtonLabel]="okButtonLabel" (onRightButtonSelect)="triggerOKSelection()">
             <ng-container #container>
                 <div class="igx-calendar__header">
                     <h5 class="igx-calendar__header-year">{{ selectedAmPm }}</h5>
@@ -11,23 +12,24 @@
                         <span>{{ selectedHour }}</span>:<span>{{ selectedMinute }}</span>
                     </h2>
                 </div>
-                <div>
-                    <ul #hourList class="igx-time-picker__hourList" (wheel)="onHourWheel($event)" tabindex="0" (panmove)="onHourPan($event)" (mouseover)="onListHover($event)">
+                <div class="igx-time-picker__body">
+                    <ul #hourList class="igx-time-picker__column igx-time-picker__hourList" (wheel)="onHourWheel($event)" tabindex="0" (panmove)="onHourPan($event)" (mouseover)="onListHover($event)">
                         <li [igxHourItem]="item" *ngFor="let item of hourItems" (click)="onHourClicked(item)">
                             {{ item }}
                         </li>
                     </ul>
-                    <ul #minuteList class="igx-time-picker__minuteList" (wheel)="onMinuteWheel($event)" tabindex="0" (panmove)="onMinutePan($event)" (mouseover)="onListHover($event)">
+                    <ul #minuteList class="igx-time-picker__column igx-time-picker__minuteList" (wheel)="onMinuteWheel($event)" tabindex="0" (panmove)="onMinutePan($event)" (mouseover)="onListHover($event)">
                         <li [igxMinuteItem]="item" *ngFor="let item of minuteItems" (click)="onMinuteClicked(item)">
                             {{ item }}
                         </li>
                     </ul>
-                    <ul #ampmList class="igx-time-picker__ampmList" (wheel)="onAmPmWheel($event)" tabindex="0" (panmove)="onAmPmPan($event)" (mouseover)="onListHover($event)">
+                    <ul #ampmList class="igx-time-picker__column igx-time-picker__ampmList" (wheel)="onAmPmWheel($event)" tabindex="0" (panmove)="onAmPmPan($event)" (mouseover)="onListHover($event)">
                         <li [igxAmPmItem]="item" *ngFor="let item of ampmItems" (click)="onAmPmClicked(item)">
                             {{ item }}
                         </li>
                     </ul>
                 </div>
             </ng-container>
-    </igx-dialog>
+        </igx-dialog>
+    </div>
 </ng-template>
