--- a/src/core/styles/components/tiem-picker/_time-picker-theme.scss
+++ b/src/core/styles/components/tiem-picker/_time-picker-theme.scss
@@ -20,7 +20,7 @@ $components: register-component($components, #{$component-name});
 
     %igx-time-picker__body {
         display: flex;
-        height: 325px;
+        padding:10px 0;
         justify-content: center;
     }
 
@@ -60,17 +60,21 @@ $components: register-component($components, #{$component-name});
     }
 
     %igx-time-picker__column {
-        margin: 0 0 0 15px;
-        overflow-y: auto;
-        overflow-x: hidden;
+        height: 325px;
+        margin: 0 0 0 8px;
+        padding: 0;
         overflow: hidden;
         font-size: 16px;
         cursor: pointer;
         list-style: none inside;
-        padding: 0;
         align-items: center;
         justify-content: center;
         width: 64px;
+
+        &:focus,
+        &:active {
+            outline: red;
+        }
 
         &:first-of-type {
             margin-left: 0;
@@ -81,6 +85,10 @@ $components: register-component($components, #{$component-name});
         width: 64px;
         padding: 5px 10px;
         border-radius: 15px;
+        min-height: 50px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
 
         &:hover {
             color: #e41c77;
@@ -92,26 +100,12 @@ $components: register-component($components, #{$component-name});
     %igx-time-picker__ampmList--selected {
         font-size: 24px;
         color: #e41c77;
+    }
+
+    %igx-time-picker__hourList--active,
+    %igx-time-picker__minuteList--active,
+    %igx-time-picker__ampmList--active {
         background: #f9f9f9;
-    }
-
-
-    %igx-time-picker__ampmList--1,
-    %igx-time-picker__minuteList--1,
-    %igx-time-picker__hourList--1 {
-        opacity: .2;
-    }
-
-    %igx-time-picker__ampmList--2,
-    %igx-time-picker__minuteList--2,
-    %igx-time-picker__hourList--2 {
-        opacity: .45;
-    }
-
-    %igx-time-picker__ampmList--3,
-    %igx-time-picker__minuteList--3,
-    %igx-time-picker__hourList--3 {
-        opacity: .8;
     }
 }
 
