added subcription on edit, add and delete to reset summary cache

--- a/src/grid/grid-summary.component.html
+++ b/src/grid/grid-summary.component.html
@@ -1,4 +1,5 @@
 <div *ngIf="column.hasSummary">
+    {{ column.field }}
     <ng-container *ngFor="let summary of resolveSummaries">
         <tr>
         <td>{{ summary.label }}: </td><td>{{ summary.summaryResult }}</td>
